Fix sidebar, scrollbar, improve button, add initial xfce styles

--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -68,6 +68,7 @@ $button_transition: all 200ms $ease-out-quad;
 .gtkstyle-fallback {
   color: $fg_color;
   background-color: $bg_color;
+  text-shadow: none;
 
   &:hover {
     color: $fg_color;
@@ -1379,7 +1380,7 @@ headerbar {
     $_hc: mix($top_hilight,$selected_bg_color, 50%); // hilight color
 
     color: $selected_fg_color;
-    text-shadow: 0 -1px transparentize(black, 0.5);
+    text-shadow: none;
     border-color: $selected_borders_color;
 
     @include headerbar_fill($selected_bg_color, $_hc);
@@ -1999,7 +2000,7 @@ notebook {
     padding: 1px;
     border-color: $borders_color;
     border-width: 1px;
-    background-color: $bg_color;
+    background-color: lighten($bg_color,5%);
 
     &:backdrop {
       border-color: $backdrop_borders_color;
@@ -2141,7 +2142,7 @@ notebook {
       font-weight: bold;
 
       border-width: 1px;         // for reorderable tabs
-      border-color: transparent; //
+      border-color: $fg_color; //
 
       &:hover {
         color: mix($insensitive_fg_color, $fg_color, 50%);
@@ -2256,7 +2257,7 @@ notebook {
   }
 
   > stack:not(:only-child) { // the :not(:only-child) is for "hidden" notebooks
-    background-color: $bg_color;
+    background-color: lighten($bg_color,5%);
 
     &:backdrop { background-color: $backdrop_bg_color; }
   }
@@ -2275,32 +2276,41 @@ scrollbar {
     -GtkScrollbar-has-forward-stepper: false;
   }
 
-  background-color: $scrollbar_bg_color;
+  background-image: linear-gradient(to right,
+                                    lighten($bg_color, 10%),
+                                    lighten($bg_color, 30%)
+                                    );
   transition: 300ms $ease-out-quad;
 
   // scrollbar border
-  &.top { border-bottom: 1px solid $borders_color; }
-  &.bottom { border-top: 1px solid $borders_color; }
-  &.left { border-right: 1px solid $borders_color; }
-  &.right { border-left: 1px solid $borders_color; }
+  &.top { border-bottom: 1px solid lighten($bg_color, 5%); }
+  &.bottom { border-top: 1px solid lighten($bg_color, 5%); }
+  &.left { border-right: 1px solid lighten($bg_color, 5%); }
+  &.right { border-left: 1px solid lighten($bg_color, 5%); }
 
   &:backdrop {
     background-color: $backdrop_scrollbar_bg_color;
-    border-color: $backdrop_borders_color;
+    border-color: lighten($bg_color, 5%);
     transition: $backdrop_transition;
   }
 
   // slider
   slider {
-    min-width: 6px;
-    min-height: 6px;
-    margin: -1px;
-    border: 4px solid transparent;
-    border-radius: 8px;
+    min-width: 7px;
+    min-height: 7px;
+    margin: 3px;
+    border: 1px solid darken($bg_color, 30%);
+    border-radius: 10px;
     background-clip: padding-box;
-    background-color: $scrollbar_slider_color;
+    background-image: linear-gradient(to right,
+                                      lighten($scrollbar_slider_color, 5%),
+                                      lighten($scrollbar_slider_color, 1%));
 
-    &:hover { background-color: $scrollbar_slider_hover_color; }
+    &:hover {
+      background-image: linear-gradient(to right,
+                                        darken($scrollbar_slider_color, 5%),
+                                        darken($scrollbar_slider_color, 1%));
+    }
 
     &:hover:active { background-color: $scrollbar_slider_active_color; }
 
@@ -2321,6 +2331,8 @@ scrollbar {
 
   &.overlay-indicator {
     &:not(.dragging):not(.hovering) {
+      -GtkRange-slider-width: 5px;
+      -GtkRange-trough-border: 1px;
       border-color: transparent;
       opacity: 0.4;
       background-color: transparent;
@@ -2402,7 +2414,7 @@ scrollbar {
     &:disabled {
       @include button(undecorated);
 
-      color: transparentize($scrollbar_slider_color, 0.8);
+      color: gtkalpha($scrollbar_slider_color, 0.8);
     }
     &:backdrop {
       @include button(undecorated);
@@ -2797,8 +2809,8 @@ scale {
   // the slider is inside the trough, so to have make it bigger there's a negative margin
 
   slider {
-    min-height: 18px;
-    min-width: 18px;
+    min-height: 9px;
+    min-width: 9px;
     margin: -9px;
   }
 
@@ -3633,8 +3645,27 @@ filechooserbutton:drop(active) {
  ***********/
 .sidebar {
   border-style: none;
-  background-color: mix($bg_color, $base_color, 50%);
+  background-color: $sidebar_bg_color;
+  -gtk-icon-style: regular;
 
+  row {
+    &:selected {
+      background-image: linear-gradient(to bottom,
+                                        shade($sidebar_bg_color, 0.87),
+                                        shade($sidebar_bg_color, 0.95) 10%,
+                                        shade($sidebar_bg_color, 0.99) 92%,
+                                        shade($sidebar_bg_color, 0.92)
+                                        );
+      box-shadow: 0 -1px shade($bg_color, 0.85),
+                  0 1px shade($bg_color, 1.12);
+
+      label {
+        color: $fg_color;
+        &:backdrop { color: $backdrop_fg_color; }
+      }
+    }
+    &:backdrop { background-color: transparent; }
+  }
   @at-root %sidebar_left,
   &:dir(ltr),
   &.left,
@@ -3705,14 +3736,15 @@ placessidebar {
     // will make the animation of the new bookmark row jump
     > revealer { padding: 0 14px; }
 
-    &:selected { color: $selected_fg_color; }
+    &:selected { color: $fg_color; }
 
     &:disabled { color: $insensitive_fg_color; }
 
     &:backdrop {
       color: $backdrop_fg_color;
+      background-color: $backdrop_bg_color;
 
-      &:selected { color: $backdrop_selected_fg_color; }
+      &:selected { color: $backdrop_fg_color; }
 
       &:disabled { color: $backdrop_insensitive_color; }
     }
@@ -3765,7 +3797,12 @@ placessidebar {
 
       &:selected {
         color: $selected_fg_color;
-        background-color: $drop_target_color;
+        background-image: linear-gradient(to bottom,
+                                          darken(mix(darken($base_color, 10%), lighten($selected_bg_color, 35%), 0.1), 13%),
+                                          darken(mix(darken($base_color, 10%), lighten($selected_bg_color, 35%), 0.1), 5%) 10%,
+                                          darken(mix(darken($base_color, 10%), lighten($selected_bg_color, 35%), 0.1), 1%) 92%,
+                                          darken(mix(darken($base_color, 10%), lighten($selected_bg_color, 35%), 0.1), 8%)
+                                          );
       }
     }
   }
@@ -3925,7 +3962,7 @@ tooltip {
                                               // very dark backgrounds
   }
 
-  padding: 4px; /* not working */
+  padding: 1px; /* not working */
   border-radius: 5px;
   box-shadow: none; // otherwise it gets inherited by windowframe.csd
   text-shadow: 0 1px black;
@@ -3934,7 +3971,7 @@ tooltip {
   decoration { background-color: transparent; }
 
   * { // Yeah this is ugly
-    padding: 4px;
+    padding: 1px;
     background-color: transparent;
     color: white;
   }
